objects/Item__c.object
<CustomObject>
    <fields>
        <fullName>Flavors__c</fullName>
        <label>Flavors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tea</fullName>
                </value>
                <value>
                    <fullName>Chocolate</fullName>
                </value>
                <value>
                    <fullName>Cranberry</fullName>
                </value>
                <value>
                    <fullName>Tar</fullName>
                </value>
                <value>
                    <fullName>Floral</fullName>
                </value>
                <value>
                    <fullName>Licorice</fullName>
                </value>
                <value>
                    <fullName>Truffle</fullName>
                </value>
                <value>
                    <fullName>Toasty</fullName>
                </value>
                <value>
                    <fullName>Mineral</fullName>
                </value>
                <value>
                    <fullName>Cherry</fullName>
                </value>
                <value>
                    <fullName>Pine</fullName>
                </value>
                <value>
                    <fullName>Cigar</fullName>
                </value>
                <value>
                    <fullName>Berry</fullName>
                </value>
                <value>
                    <fullName>Coffee</fullName>
                </value>
                <value>
                    <fullName>Herbs</fullName>
                </value>
                <value>
                    <fullName>Nutty</fullName>
                </value>
                <value>
                    <fullName>Vanilla</fullName>
                </value>
                <value>
                    <fullName>Raspberry</fullName>
                </value>
                <value>
                    <fullName>Strawberry</fullName>
                </value>
                <value>
                    <fullName>Fruity</fullName>
                </value>
                <value>
                    <fullName>Spices</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frontline_Retail_Cost_Case__c</fullName>
        <label>Everyday Retail Cost $ (Case)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Vineyard record to pull in the Geography data.</description>
        <inlineHelpText>Lookup to the Vineyard record to pull in the Geography data. Please use the Search function to find correct record.</inlineHelpText>
        <label>Geography/Taxonomy</label>
        <referenceTo>Geography__c</referenceTo>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift_Pack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gift Pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grade_Potency_Pricing__c</fullName>
        <label>Grade Potency Pricing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Warehouse_Process_1__c</fullName>
        <label>Group Warehouse Process - 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Harmonized_Code__c</fullName>
        <label>Harmonized Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Harvest_Date__c</fullName>
        <description>Harvest date</description>
        <label>Harvest Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IU_Type__c</fullName>
        <label>XXIU Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Item</fullName>
                </value>
                <value>
                    <fullName>New Item / Vintage (Copy)</fullName>
                </value>
                <value>
                    <fullName>Item Update (Copy)</fullName>
                </value>
                <value>
                    <fullName>Winery Unfinished Item</fullName>
                </value>
                <value>
                    <fullName>Winery Unfinished Item (Copy)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_am_Brand_Manager__c</fullName>
        <formula>If($User.Id =   Brand__r.Marketing_Manager__r.Id   ,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I am Brand Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_am_Executive__c</fullName>
        <formula>If($User.Id =  Brand__r.Marketing_Executive__r.Id, True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I am Executive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identify_Competitive_Brand__c</fullName>
        <label>Identify Competitive Brand</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Height_in_Inches__c</fullName>
        <label>Item Height (in Inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <externalId>true</externalId>
        <label>Long Item Number (SKU)</label>
        <length>28</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Item_Weight__c</fullName>
        <label>Item Weight (in pounds)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Width_in_Inches__c</fullName>
        <label>Item Width (in Inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_designation__c</fullName>
        <label>Item designation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Winery only</fullName>
                </value>
                <value>
                    <fullName>Winery &amp; Wholesale</fullName>
                </value>
                <value>
                    <fullName>Wholesale only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kits_Packs_per_Case__c</fullName>
        <label>Kits/Packs per Case</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Cost_Completed_TimeStamp__c</fullName>
        <label>Last Cost Completed TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Mktg_Update_TimeStamp__c</fullName>
        <label>Last Mktg Update TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Layers_per_Pallet_Height__c</fullName>
        <label>Layers per Pallet (Height)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Product_Description__c</fullName>
        <description>Legal description of product. Final value is determined by value from ShipCompliant/TTB</description>
        <inlineHelpText>Legal description of product. Final value is determined by value from ShipCompliant/TTB</inlineHelpText>
        <label>Legal Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Inventory_Cost__c</fullName>
        <label>Level Inventory Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Sales_Base_Price__c</fullName>
        <label>Level Sales Base Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Expiration_Calculation__c</fullName>
        <label>Lot Expiration Calculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufactured_Item_Number__c</fullName>
        <description>Third Item Number in JDE - AITM</description>
        <inlineHelpText>Third Item Number in JDE - AITM</inlineHelpText>
        <label>Manufactured Item Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_CIF_New__c</fullName>
        <label>Margin CIF (New)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_CIF_Old__c</fullName>
        <label>Margin CIF (Old)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_CIF_pct_New__c</fullName>
        <label>Margin CIF % (New)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_CIF_pct_Old__c</fullName>
        <label>Margin CIF % (Old)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Warehouse_New__c</fullName>
        <label>Margin Warehouse (New)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Warehouse_Old__c</fullName>
        <label>Margin Warehouse (Old)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Warehouse_pct_New__c</fullName>
        <label>Margin Warehouse % (New)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Warehouse_pct_Old__c</fullName>
        <label>Margin Warehouse % (Old)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Product_Description__c</fullName>
        <label>Marketing Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Product_Name__c</fullName>
        <description>Product name only, without brand or vintage information</description>
        <inlineHelpText>The &quot;name&quot; of the product only, WITHOUT the Brand name or varietal. For example, Chimney Rock Tomahawk Vineyard Cabernet 2013, the name would be &quot;Tomahawk Vineyard&quot;.</inlineHelpText>
        <label>Marketing Product Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Planning_Family__c</fullName>
        <label>Master Planning Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opening_Order_Days_on_Hand__c</fullName>
        <label>Opening Order Days on Hand Estimate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Policy_Code__c</fullName>
        <label>Order Policy Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organic_SustainableBiodynamic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organic / Sustainable/Biodynamic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_adjustment__c</fullName>
        <label>Other adjustment $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pairings__c</fullName>
        <description>Food pairings for the item</description>
        <inlineHelpText>One or more pairings for this item</inlineHelpText>
        <label>Pairings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beef</fullName>
                </value>
                <value>
                    <fullName>Lamb</fullName>
                </value>
                <value>
                    <fullName>Pork</fullName>
                </value>
                <value>
                    <fullName>Poultry</fullName>
                </value>
                <value>
                    <fullName>Game</fullName>
                </value>
                <value>
                    <fullName>Fish</fullName>
                </value>
                <value>
                    <fullName>Steak Fish</fullName>
                </value>
                <value>
                    <fullName>Fin Fish</fullName>
                </value>
                <value>
                    <fullName>Spicy Food</fullName>
                </value>
                <value>
                    <fullName>Mild &amp; Soft Cheese</fullName>
                </value>
                <value>
                    <fullName>Mature &amp; Hard Cheese</fullName>
                </value>
                <value>
                    <fullName>Meat</fullName>
                </value>
                <value>
                    <fullName>BBQ</fullName>
                </value>
                <value>
                    <fullName>Shellfish</fullName>
                </value>
                <value>
                    <fullName>Pasta</fullName>
                </value>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
                <value>
                    <fullName>Chocolate Desserts</fullName>
                </value>
                <value>
                    <fullName>Sweet Desserts</fullName>
                </value>
                <value>
                    <fullName>Fruity Desserts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pallet_Height_in_inches__c</fullName>
        <label>Pallet Height (in inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pallet_Length_in_inches__c</fullName>
        <label>Pallet Length (in inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pallet_Type__c</fullName>
        <label>Pallet Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wood</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pallet_Width_in_inches__c</fullName>
        <label>Pallet Width (in inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Costing_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Costing Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pickup_Warehouse__c</fullName>
        <description>This picklist drives the address fields for the FOB Warehouse Pickup location which is needed for down stream systems.</description>
        <inlineHelpText>To be completed by Operations: This picklist drives the address fields for the FOB Warehouse Pickup location which is needed for down stream systems.</inlineHelpText>
        <label>Pickup Warehouse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Western Carriers NJ</fullName>
                </value>
                <value>
                    <fullName>Western Wine Services CA</fullName>
                </value>
                <value>
                    <fullName>Wine Service Co-Op CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planning_Code__c</fullName>
        <label>Planning Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presale_End_date__c</fullName>
        <label>Presale End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Presale_Price_Discount__c</fullName>
        <label>Presale Price Discount $ (Case)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Presale_Start_date__c</fullName>
        <label>Presale Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Book_Month__c</fullName>
        <label>Price Book Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Private_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Benefits__c</fullName>
        <description>Benefits of the product for the one-pager sell sheets</description>
        <label>Benefits</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Features__c</fullName>
        <description>Features of the product for the one-pager sell sheet</description>
        <label>Features</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Production_UOM__c</fullName>
        <description>BT = Bottle CS = Case KG = Keg</description>
        <inlineHelpText>BT = Bottle CS = Case KG = Keg</inlineHelpText>
        <label>Production UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proof__c</fullName>
        <label>Proof</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Alcohol_Percentage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>110</fullName>
                    <label>11</label>
                </value>
                <value>
                    <fullName>116</fullName>
                    <label>11.6</label>
                </value>
                <value>
                    <fullName>120</fullName>
                    <label>12</label>
                </value>
                <value>
                    <fullName>130</fullName>
                    <label>13</label>
                </value>
                <value>
                    <fullName>140</fullName>
                    <label>14</label>
                </value>
                <value>
                    <fullName>150</fullName>
                    <label>15</label>
                </value>
                <value>
                    <fullName>151</fullName>
                    <label>15.1</label>
                </value>
                <value>
                    <fullName>160</fullName>
                    <label>16</label>
                </value>
                <value>
                    <fullName>170</fullName>
                    <label>17</label>
                </value>
                <value>
                    <fullName>180</fullName>
                    <label>18</label>
                </value>
                <value>
                    <fullName>182</fullName>
                    <label>18.2</label>
                </value>
                <value>
                    <fullName>184</fullName>
                    <label>18.4</label>
                </value>
                <value>
                    <fullName>190</fullName>
                    <label>19</label>
                </value>
                <value>
                    <fullName>195</fullName>
                    <label>19.5</label>
                </value>
                <value>
                    <fullName>200</fullName>
                    <label>20</label>
                </value>
                <value>
                    <fullName>206</fullName>
                    <label>20.6</label>
                </value>
                <value>
                    <fullName>210</fullName>
                    <label>21</label>
                </value>
                <value>
                    <fullName>214</fullName>
                    <label>21.4</label>
                </value>
                <value>
                    <fullName>220</fullName>
                    <label>22</label>
                </value>
                <value>
                    <fullName>230</fullName>
                    <label>23</label>
                </value>
                <value>
                    <fullName>232</fullName>
                    <label>23.2</label>
                </value>
                <value>
                    <fullName>236</fullName>
                    <label>23.6</label>
                </value>
                <value>
                    <fullName>23.8</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                    <label>24</label>
                </value>
                <value>
                    <fullName>242</fullName>
                    <label>24.2</label>
                </value>
                <value>
                    <fullName>244</fullName>
                    <label>24.4</label>
                </value>
                <value>
                    <fullName>246</fullName>
                    <label>24.6</label>
                </value>
                <value>
                    <fullName>248</fullName>
                    <label>24.8</label>
                </value>
                <value>
                    <fullName>250</fullName>
                    <label>25</label>
                </value>
                <value>
                    <fullName>252</fullName>
                    <label>25.2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity_Accounting_Cost__c</fullName>
        <label>Quantity Accounting Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratings__c</fullName>
        <label>Ratings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Restrictions_by_Area__c</fullName>
        <label>Sales Restrictions by Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Billback_Percent__c</fullName>
        <label>Sample Billback Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Select_SKU_for_Louisiana__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select SKU for Louisiana?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selection__c</fullName>
        <label>Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EST</fullName>
                    <label>Estate</label>
                </value>
                <value>
                    <fullName>PRM</fullName>
                    <label>Premier</label>
                </value>
                <value>
                    <fullName>CRU</fullName>
                    <label>Cru</label>
                </value>
                <value>
                    <fullName>SPR</fullName>
                    <label>Spirits</label>
                </value>
                <value>
                    <fullName>FAB</fullName>
                    <label>Food Beverage</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sell_by_Default_Days__c</fullName>
        <label>Sell by Default Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number_Required__c</fullName>
        <label>Serial Number Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servings_per_Package__c</fullName>
        <label>Servings per Package</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shelf_Life_Days__c</fullName>
        <label>Shelf Life Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Item_Number_SKU__c</fullName>
        <externalId>true</externalId>
        <label>Short Item Number (SKU)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_In_Liters__c</fullName>
        <description>Calculated field based on the Size of Bottle - converts to numerical size in liters.</description>
        <formula>CASE(Size__c, 
&quot;20&quot;, 0.0200, 
&quot;20 ML&quot;, 0.0200, 
&quot;30&quot;, 0.0300, 
&quot;30 ML&quot;, 0.0300,
&quot;50&quot;, 0.0500, 
&quot;100&quot;, 0.1000, 
&quot;120&quot;, 0.1200, 
&quot;120 ML&quot;, 0.1200,
&quot;130&quot;, 0.1300, 
&quot;130 ML&quot;, 0.1300,
&quot;180&quot;, 0.1800, 
&quot;187&quot;, 0.1870, 
&quot;200&quot;, 0.2000, 
&quot;250&quot;, 0.2500, 
&quot;300&quot;, 0.3000, 
&quot;303&quot;, 0.3030, 
&quot;375&quot;, 0.3750, 
&quot;375 ML&quot;, 0.3750,
&quot;500&quot;, 0.5000, 
&quot;500 ML&quot;, 0.5000,
&quot;700&quot;, 0.7000, 
&quot;720&quot;, 0.7200, 
&quot;750&quot;, 0.7500, 
&quot;750 ML&quot;, 0.7500,
&quot;1LT&quot;, 1.000, 
&quot;175&quot;, 1.750, 
&quot;180&quot;, 1.800,
&quot;1.5 LT&quot;, 1.500,
&quot;1.8 LT&quot;, 1.800, 
&quot;2LT&quot;, 2.000, 
&quot;2 LT&quot;, 2.000, 
&quot;3LT&quot;, 3.000, 
&quot;3 LT&quot;, 3.000,
&quot;4LT&quot;, 4.000, 
&quot;4 LT&quot;, 4.000, 
&quot;4.5 LT&quot;, 4.500, 
&quot;450&quot;, 4.500, 
&quot;5LT&quot;, 5.000, 
&quot;6LT&quot;, 6.000, 
&quot;7LT&quot;, 7.000, 
&quot;8LT&quot;, 8.000, 
&quot;9LT&quot;, 9.000, 
&quot;12L&quot;, 12.000, 
&quot;15L&quot;, 15.000, 
&quot;18L&quot;, 18.000, 
&quot;19L&quot;, 19.000, 
&quot;19 LT&quot;, 19.000, 
&quot;20L&quot;, 20.000, 
&quot;20 LT&quot;, 20.000,
&quot;25L&quot;, 25.000, 
&quot;25 LT&quot;, 25.000, 
&quot;28L&quot;, 28.000, 
&quot;28 LT&quot;, 28.000,
&quot;30L&quot;, 30.000, 
&quot;30 LT&quot;, 30.000,
&quot;45L&quot;, 45.000, 
&quot;45 LT&quot;, 45.000, 
&quot;50L&quot;, 50.000,
&quot;50 LT&quot;, 50.000,  
&quot;60L&quot;, 60.000, 
&quot;60 LT&quot;, 60.000,
0.0000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated field based on the Size of Bottle - converts to numerical size in liters.</inlineHelpText>
        <label>Size In Liters</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size of Bottle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>375</fullName>
                    <label>375 ML</label>
                </value>
                <value>
                    <fullName>750</fullName>
                    <label>750 ML</label>
                </value>
                <value>
                    <fullName>1LT</fullName>
                    <label>1 LT</label>
                </value>
                <value>
                    <fullName>1.5</fullName>
                    <label>1.5 LT</label>
                </value>
                <value>
                    <fullName>3LT</fullName>
                    <label>3 LT</label>
                </value>
                <value>
                    <fullName>9LT</fullName>
                    <label>9 LT</label>
                </value>
                <value>
                    <fullName>50M</fullName>
                    <label>50 ML</label>
                </value>
                <value>
                    <fullName>100</fullName>
                    <label>100 ML</label>
                </value>
                <value>
                    <fullName>180</fullName>
                    <label>180 ML</label>
                </value>
                <value>
                    <fullName>187</fullName>
                    <label>187 ML</label>
                </value>
                <value>
                    <fullName>200</fullName>
                    <label>200 ML</label>
                </value>
                <value>
                    <fullName>250</fullName>
                    <label>250 ML</label>
                </value>
                <value>
                    <fullName>300</fullName>
                    <label>300 ML</label>
                </value>
                <value>
                    <fullName>303 ML</fullName>
                </value>
                <value>
                    <fullName>330</fullName>
                    <label>330 ML</label>
                </value>
                <value>
                    <fullName>500</fullName>
                    <label>500 ML</label>
                </value>
                <value>
                    <fullName>700</fullName>
                    <label>700 ML</label>
                </value>
                <value>
                    <fullName>720</fullName>
                    <label>720 ML</label>
                </value>
                <value>
                    <fullName>175</fullName>
                    <label>1.75 LT</label>
                </value>
                <value>
                    <fullName>5LT</fullName>
                    <label>5 LT</label>
                </value>
                <value>
                    <fullName>6LT</fullName>
                    <label>6 LT</label>
                </value>
                <value>
                    <fullName>12L</fullName>
                    <label>12 LT</label>
                </value>
                <value>
                    <fullName>15L</fullName>
                    <label>15 LT</label>
                </value>
                <value>
                    <fullName>18L</fullName>
                    <label>18 LT</label>
                </value>
                <value>
                    <fullName>400</fullName>
                    <label>400 ML</label>
                </value>
                <value>
                    <fullName>650</fullName>
                    <label>650 BL</label>
                </value>
                <value>
                    <fullName>HBL</fullName>
                    <label>Half Barrel 79.5 L</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Region_Code__c</fullName>
        <formula>Geography__r.Code_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State / Region of Origin Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Region__c</fullName>
        <formula>Geography__r.State_Region_of_Origin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State / Region of Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Legacy Record</fullName>
                    <default>true</default>
                    <label>Legacy Record</label>
                </value>
                <value>
                    <fullName>Marketing Updated</fullName>
                </value>
                <value>
                    <fullName>Send to JDE</fullName>
                </value>
                <value>
                    <fullName>JDE Updated</fullName>
                </value>
                <value>
                    <fullName>Integration Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Std_Cost__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Cost Reference</label>
        <referenceTo>Std_Cost__c</referenceTo>
        <relationshipLabel>Items - Active</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stocking_Type__c</fullName>
        <label>Stocking Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>